//syntax = "proto3";
//package proto; //包名和go中的必须一致
//option java_generic_services = true;
//option java_multiple_files = true;
//option java_package = "com.spw.proto";
//option java_outer_classname = "HelloWorldProto";
syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.example.__gRPCClient";
option java_outer_classname = "HelloWorldServerStreamProto";
option objc_class_prefix = "HLW";
package helloworldserverstream;
//接口请求入参
message HelloRequest{
    string name  = 1;
}
//接口返回出参
message HelloReply{
    string message  = 1;
}
//定义接口
service Greeter2{
    //一个服务器端流式rpc
    rpc HelloWorldServerStream(HelloRequest) returns (stream HelloReply){}
}